airflow_docker/logs/dag_id=dag_with_postgres_operator_v0222/run_id=manual__2023-12-22T04:09:35.600889+00:00/task_id=insert_into_postgres_table/attempt=1.log
[2023-12-22T04:09:39.803+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v0222.insert_into_postgres_table manual__2023-12-22T04:09:35.600889+00:00 [queued]>
[2023-12-22T04:09:39.826+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v0222.insert_into_postgres_table manual__2023-12-22T04:09:35.600889+00:00 [queued]>
[2023-12-22T04:09:39.828+0000] {taskinstance.py:2171} INFO - Starting attempt 1 of 1
[2023-12-22T04:09:39.856+0000] {taskinstance.py:2192} INFO - Executing <Task(PostgresOperator): insert_into_postgres_table> on 2023-12-22 04:09:35.600889+00:00
[2023-12-22T04:09:39.867+0000] {standard_task_runner.py:60} INFO - Started process 10544 to run task
[2023-12-22T04:09:39.874+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator_v0222', 'insert_into_postgres_table', 'manual__2023-12-22T04:09:35.600889+00:00', '--job-id', '166', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgres_operator.py', '--cfg-path', '/tmp/tmp_drku25k']
[2023-12-22T04:09:39.881+0000] {standard_task_runner.py:88} INFO - Job 166: Subtask insert_into_postgres_table
[2023-12-22T04:09:39.979+0000] {task_command.py:423} INFO - Running <TaskInstance: dag_with_postgres_operator_v0222.insert_into_postgres_table manual__2023-12-22T04:09:35.600889+00:00 [running]> on host dd88aaafc1d9
[2023-12-22T04:09:40.127+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='sarwar' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator_v0222' AIRFLOW_CTX_TASK_ID='insert_into_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2023-12-22T04:09:35.600889+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-12-22T04:09:35.600889+00:00'
[2023-12-22T04:09:40.135+0000] {sql.py:276} INFO - Executing: 
            insert into dag_runs (dt, dag_id) values(2023-12-22 04:09:39.485094, dag_with_postgres_operator_v0222 )
        
[2023-12-22T04:09:40.158+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-12-22T04:09:40.179+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-12-22T04:09:40.199+0000] {sql.py:432} INFO - Running statement: 
            insert into dag_runs (dt, dag_id) values(2023-12-22 04:09:39.485094, dag_with_postgres_operator_v0222 )
        , parameters: None
[2023-12-22T04:09:40.206+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 437, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "04"
LINE 2: ...sert into dag_runs (dt, dag_id) values(2023-12-22 04:09:39.4...
                                                             ^

[2023-12-22T04:09:40.224+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=dag_with_postgres_operator_v0222, task_id=insert_into_postgres_table, execution_date=20231222T040935, start_date=20231222T040939, end_date=20231222T040940
[2023-12-22T04:09:40.256+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 166 for task insert_into_postgres_table (syntax error at or near "04"
LINE 2: ...sert into dag_runs (dt, dag_id) values(2023-12-22 04:09:39.4...
                                                             ^
; 10544)
[2023-12-22T04:09:40.303+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2023-12-22T04:09:40.337+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
